# node-ejdb-lite-old

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Changelog  README.md  applyUpdatesFromSoftmotions.sh  hello.db  installRemote.sh  installSource.sh  package-lock.json  package.json
.github/workflows/: deploy-linux.yml  deploy-mac.yml  deploy.yml  test-linux.yml  test-mac.yml  test.yml
example/: README.md
src/: CMakeLists.txt
src/bindings/ejdb2_node/: CHANGELOG.md  CMakeLists.txt  README.md  binary.js  index.js  test.js  utils.js  version.txt
src/jbl/: jbl_json.c
src/jbs/: CMakeLists.txt
src/tmpl/: libejdb2.pc.in
